// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the interviewer details page renders correctly matches loading snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          aria-label="Breadcrumb"
          class="breadcrumb"
        >
          <ol
            class="breadcrumb__items u-fs-s"
          >
            <li
              class="breadcrumb__item"
              id="breadcrumb-0"
            >
              <a
                class="breadcrumb__link"
                href="/"
              >
                Reports
              </a>
              <svg
                class="svg-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
            <li
              class="breadcrumb__item"
              id="breadcrumb-1"
            >
              <a
                class="breadcrumb__link"
                href="/"
              >
                Interviewer details
              </a>
              <svg
                class="svg-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
          </ol>
        </nav>
        <main
          class="page__main u-mt-s"
          id="main-content"
        >
          <h1>
            Select questionnaires for
          </h1>
          <h3
            class="u-mb-m"
          >
            Interviewer: 
            James
            <br />
            Period: 
            01/01/2022
            –
            05/01/2022
          </h3>
          <p
            aria-live="polite"
            class="u-fs-s u-mt-s"
          >
            Data in this report was last updated: 
            <b>
              Loading
            </b>
          </p>
          <p
            class="u-fs-s"
          >
            Data in this report only goes back to the last 12 months.
          </p>
          <div
            class="input-items"
          >
            <div
              class="checkboxes__items"
            >
              <div
                class="panel panel--info panel--no-title  u-mt-m"
              >
                <div
                  class="panel__body "
                >
                  <div
                    style="text-align: center;"
                  >
                    <div
                      aria-busy="true"
                      class=""
                    >
                      <svg
                        aria-label="audio-loading"
                        height="30"
                        viewBox="0 0 38 38"
                        width="30"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <defs>
                          <lineargradient
                            id="a"
                            x1="8.042%"
                            x2="65.682%"
                            y1="0%"
                            y2="23.865%"
                          >
                            <stop
                              offset="0%"
                              stop-color="#064868"
                              stop-opacity="0"
                            />
                            <stop
                              offset="63.146%"
                              stop-color="#064868"
                              stop-opacity=".631"
                            />
                            <stop
                              offset="100%"
                              stop-color="#064868"
                            />
                          </lineargradient>
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <g
                            transform="translate(1 1)"
                          >
                            <path
                              d="M36 18c0-9.94-8.06-18-18-18"
                              id="Oval-2"
                              stroke="#064868"
                              stroke-width="2"
                            >
                              <animatetransform
                                attributeName="transform"
                                dur="0.9s"
                                from="0 18 18"
                                repeatCount="indefinite"
                                to="360 18 18"
                                type="rotate"
                              />
                            </path>
                            <circle
                              cx="36"
                              cy="18"
                              fill="#fff"
                              r="1"
                            >
                              <animatetransform
                                attributeName="transform"
                                dur="0.9s"
                                from="0 18 18"
                                repeatCount="indefinite"
                                to="360 18 18"
                                type="rotate"
                              />
                            </circle>
                          </g>
                        </g>
                      </svg>
                    </div>
                    Loading
                  </div>
                </div>
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Select questionnaires for
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          James
          <br />
          Period: 
          01/01/2022
          –
          05/01/2022
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            Loading
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="input-items"
        >
          <div
            class="checkboxes__items"
          >
            <div
              class="panel panel--info panel--no-title  u-mt-m"
            >
              <div
                class="panel__body "
              >
                <div
                  style="text-align: center;"
                >
                  <div
                    aria-busy="true"
                    class=""
                  >
                    <svg
                      aria-label="audio-loading"
                      height="30"
                      viewBox="0 0 38 38"
                      width="30"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <defs>
                        <lineargradient
                          id="a"
                          x1="8.042%"
                          x2="65.682%"
                          y1="0%"
                          y2="23.865%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#064868"
                            stop-opacity="0"
                          />
                          <stop
                            offset="63.146%"
                            stop-color="#064868"
                            stop-opacity=".631"
                          />
                          <stop
                            offset="100%"
                            stop-color="#064868"
                          />
                        </lineargradient>
                      </defs>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                      >
                        <g
                          transform="translate(1 1)"
                        >
                          <path
                            d="M36 18c0-9.94-8.06-18-18-18"
                            id="Oval-2"
                            stroke="#064868"
                            stroke-width="2"
                          >
                            <animatetransform
                              attributeName="transform"
                              dur="0.9s"
                              from="0 18 18"
                              repeatCount="indefinite"
                              to="360 18 18"
                              type="rotate"
                            />
                          </path>
                          <circle
                            cx="36"
                            cy="18"
                            fill="#fff"
                            r="1"
                          >
                            <animatetransform
                              attributeName="transform"
                              dur="0.9s"
                              from="0 18 18"
                              repeatCount="indefinite"
                              to="360 18 18"
                              type="rotate"
                            />
                          </circle>
                        </g>
                      </g>
                    </svg>
                  </div>
                  Loading
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`the interviewer details page renders correctly matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          aria-label="Breadcrumb"
          class="breadcrumb"
        >
          <ol
            class="breadcrumb__items u-fs-s"
          >
            <li
              class="breadcrumb__item"
              id="breadcrumb-0"
            >
              <a
                class="breadcrumb__link"
                href="/"
              >
                Reports
              </a>
              <svg
                class="svg-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
            <li
              class="breadcrumb__item"
              id="breadcrumb-1"
            >
              <a
                class="breadcrumb__link"
                href="/"
              >
                Interviewer details
              </a>
              <svg
                class="svg-icon"
                focusable="false"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </li>
          </ol>
        </nav>
        <main
          class="page__main u-mt-s"
          id="main-content"
        >
          <h1>
            Select questionnaires for
          </h1>
          <h3
            class="u-mb-m"
          >
            Interviewer: 
            James
            <br />
            Period: 
            01/01/2022
            –
            05/01/2022
          </h3>
          <p
            aria-live="polite"
            class="u-fs-s u-mt-s"
          >
            Data in this report was last updated: 
            <b>
              <time
                datetime="2000-01-01T10:00:00.000Z"
                title="2000-01-01 10:00"
              >
                23 years ago
              </time>
               (01/01/2000 10:00:00)
            </b>
          </p>
          <p
            class="u-fs-s"
          >
            Data in this report only goes back to the last 12 months.
          </p>
          <div
            class="input-items"
          >
            <div
              class="checkboxes__items"
            >
              <form
                action="#"
              >
                <fieldset
                  class="fieldset"
                >
                  <legend
                    class="fieldset__legend"
                  />
                  <button
                    class="btn u-mb-s js-auto-selector btn--small btn--secondary"
                    type="button"
                  >
                    <span
                      class="btn__inner"
                    >
                      <span
                        class="js-button-text"
                      >
                        Select All
                      </span>
                      <span
                        class="u-vh"
                      >
                         following checkboxes
                      </span>
                    </span>
                  </button>
                  <div
                    class="checkboxes__items"
                    id="questionnaires"
                  >
                    <p
                      class="checkboxes__item"
                    >
                      <span
                        class="checkbox"
                      >
                        <input
                          checked=""
                          class="checkbox__input js-checkbox"
                          id="LMS2101_AA1"
                          initial_value="LMS2101_AA1"
                          name="questionnaires"
                          type="checkbox"
                          value="LMS2101_AA1"
                        />
                        <label
                          class="checkbox__label "
                          for="LMS2101_AA1"
                          id="LMS2101_AA1-label"
                        >
                          LMS2101_AA1
                        </label>
                      </span>
                    </p>
                    <br />
                    <p
                      class="checkboxes__item"
                    >
                      <span
                        class="checkbox"
                      >
                        <input
                          class="checkbox__input js-checkbox"
                          id="LMS2101_AA2"
                          initial_value="LMS2101_AA1"
                          name="questionnaires"
                          type="checkbox"
                          value="LMS2101_AA2"
                        />
                        <label
                          class="checkbox__label "
                          for="LMS2101_AA2"
                          id="LMS2101_AA2-label"
                        >
                          LMS2101_AA2
                        </label>
                      </span>
                    </p>
                    <br />
                  </div>
                </fieldset>
                <br />
                <button
                  class="btn "
                  data-testid="submit-button"
                  type="submit"
                >
                  <span
                    class="btn__inner"
                  >
                    Run report
                  </span>
                </button>
              </form>
            </div>
          </div>
        </main>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Reports
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
          <li
            class="breadcrumb__item"
            id="breadcrumb-1"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Interviewer details
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1>
          Select questionnaires for
        </h1>
        <h3
          class="u-mb-m"
        >
          Interviewer: 
          James
          <br />
          Period: 
          01/01/2022
          –
          05/01/2022
        </h3>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              23 years ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <div
          class="input-items"
        >
          <div
            class="checkboxes__items"
          >
            <form
              action="#"
            >
              <fieldset
                class="fieldset"
              >
                <legend
                  class="fieldset__legend"
                />
                <button
                  class="btn u-mb-s js-auto-selector btn--small btn--secondary"
                  type="button"
                >
                  <span
                    class="btn__inner"
                  >
                    <span
                      class="js-button-text"
                    >
                      Select All
                    </span>
                    <span
                      class="u-vh"
                    >
                       following checkboxes
                    </span>
                  </span>
                </button>
                <div
                  class="checkboxes__items"
                  id="questionnaires"
                >
                  <p
                    class="checkboxes__item"
                  >
                    <span
                      class="checkbox"
                    >
                      <input
                        checked=""
                        class="checkbox__input js-checkbox"
                        id="LMS2101_AA1"
                        initial_value="LMS2101_AA1"
                        name="questionnaires"
                        type="checkbox"
                        value="LMS2101_AA1"
                      />
                      <label
                        class="checkbox__label "
                        for="LMS2101_AA1"
                        id="LMS2101_AA1-label"
                      >
                        LMS2101_AA1
                      </label>
                    </span>
                  </p>
                  <br />
                  <p
                    class="checkboxes__item"
                  >
                    <span
                      class="checkbox"
                    >
                      <input
                        class="checkbox__input js-checkbox"
                        id="LMS2101_AA2"
                        initial_value="LMS2101_AA1"
                        name="questionnaires"
                        type="checkbox"
                        value="LMS2101_AA2"
                      />
                      <label
                        class="checkbox__label "
                        for="LMS2101_AA2"
                        id="LMS2101_AA2-label"
                      >
                        LMS2101_AA2
                      </label>
                    </span>
                  </p>
                  <br />
                </div>
              </fieldset>
              <br />
              <button
                class="btn "
                data-testid="submit-button"
                type="submit"
              >
                <span
                  class="btn__inner"
                >
                  Run report
                </span>
              </button>
            </form>
          </div>
        </div>
      </main>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
